crates/motarjim-html/tests/snapshots/html_tests__snapshot_boolean_attributes.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<input disabled readonly>\")"
---
<html >
  <head >
  </head>
  <body >
    <input disabled="" readonly="">
    </input>
  </body>
</html>
