crates/motarjim-html/tests/snapshots/html_tests__snapshot_deeply_nested.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<div><div><div><ul><li><span>deep</span></li></ul></div></div></div>\")"
---
<html >
  <head >
  </head>
  <body >
    <div >
      <div >
        <div >
          <ul >
            <li >
              <span >
                deep
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>
</html>
