crates/motarjim-html/tests/snapshots/html_tests__snapshot_doctype.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<!DOCTYPE html><html><body></body></html>\")"
---
<!DOCTYPE html>
<html >
  <head >
  </head>
  <body >
  </body>
</html>
