crates/motarjim-html/tests/snapshots/html_tests__snapshot_empty_document.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"\")"
---
<html >
  <head >
  </head>
  <body >
  </body>
</html>
