crates/motarjim-html/tests/snapshots/html_tests__snapshot_malformed_html.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<div><span>missing end tags\")"
---
<html >
  <head >
  </head>
  <body >
    <div >
      <span >
        missing end tags
      </span>
    </div>
  </body>
</html>
