crates/motarjim-html/tests/snapshots/html_tests__snapshot_mixed_content.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<p>Hello <b>world</b> and <i>everyone</i></p>\")"
---
<html >
  <head >
  </head>
  <body >
    <p >
      Hello
      <b >
        world
      </b>
      and
      <i >
        everyone
      </i>
    </p>
  </body>
</html>
