crates/motarjim-html/tests/snapshots/html_tests__snapshot_nested_elements.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<ul><li>Item 1</li><li>Item 2</li></ul>\")"
---
<html >
  <head >
  </head>
  <body >
    <ul >
      <li >
        Item 1
      </li>
      <li >
        Item 2
      </li>
    </ul>
  </body>
</html>
