crates/motarjim-html/tests/snapshots/html_tests__snapshot_script_tag.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<script>alert('hello');</script>\")"
---
<html >
  <head >
    <script >
      alert('hello');
    </script>
  </head>
  <body >
  </body>
</html>
