crates/motarjim-html/tests/snapshots/html_tests__snapshot_simple_div.snap
---
source: crates/motarjim-html/tests/html_tests.rs
expression: "debug_html(\"<div>Hello</div>\")"
---
<html >
  <head >
  </head>
  <body >
    <div >
      Hello
    </div>
  </body>
</html>
